--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webcam",
+  "name": "bc-webcam",
   "author": "Jonas Hartmann",
-  "version": "3.2.1",
+  "version": "3.2.1-bc",
   "license": "MIT",
   "main": "app/scripts/webcam.js",
   "dependencies": {},
